--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -3,14 +3,14 @@
     padding: 0;
 }
 
-.button{
+.text{
+    width: 13.5rem;
+    height: 0.8rem;
+}
+
+input[type="button"]{
     width : 50px;
     height: 50px;
     font-size: 2rem;
     margin: 2px;
-}
-
-.text{
-    width: 13.5rem;
-    height: 0.8rem;
 }
