--- a/stopWatch/style.css
+++ b/stopWatch/style.css
@@ -1,3 +1,16 @@
 body{
-    float: center;
+    text-align: center;
+}
+
+h1{
+    font-size: 5rem;
+}
+
+button{
+    width: 10rem;
+    height: 10rem;
+}
+
+#timer{
+font-size: 2.5rem;
 }
