--- a/421-game/style.css
+++ b/421-game/style.css
@@ -1,3 +1,10 @@
 body{
     text-align: center;
+    background-color: #93FA5C;
+}
+
+footer{
+    position: absolute;
+    left: 40%;
+    bottom: 0;
 }
