--- a/game-1v1-2D/style.css
+++ b/game-1v1-2D/style.css
@@ -1,14 +1,14 @@
-body{
-  /*  background-color: black;
-    color:white;
-    text-align: center;*/
-}
-
-
 .life{
     border: 1px solid black;
     background-color: greenyellow;
     height: 1.5rem;
+    width: 10rem;
+}
+
+.mana{
+    border: 1px solid black;
+    background-color: powderblue;
+    height: 0.7rem;
     width: 10rem;
 }
 
